# SDL_gpu_examples

./: .gitmodules  CMakeLists.txt
Content/Shaders/Compiled/WGSL/: BloomDownsample.frag.wgsl  BloomUpsample.frag.wgsl  CustomSampling.frag.wgsl  DepthOutline.frag.wgsl  DepthSample.frag.wgsl  FillTexture.comp.wgsl  Fullscreen.vert.wgsl  GradientTexture.comp.wgsl  LerpBlend.frag.wgsl  LinearToSRGB.comp.wgsl  LinearToST2084.comp.wgsl  PositionColor.vert.wgsl  PositionColorInstanced.vert.wgsl  PositionColorTransform.vert.wgsl  PullSpriteBatch.vert.wgsl  RawTriangle.vert.wgsl  Skybox.frag.wgsl  Skybox.vert.wgsl  SolidColor.frag.wgsl  SolidColorDepth.frag.wgsl  SpriteBatch.comp.wgsl  TexturedQuad.comp.wgsl  TexturedQuad.frag.wgsl  TexturedQuad.vert.wgsl  TexturedQuadArray.frag.wgsl  TexturedQuadColor.frag.wgsl  TexturedQuadColorWithMatrix.vert.wgsl  TexturedQuadWithMatrix.vert.wgsl  TexturedQuadWithMultiplyColor.frag.wgsl  ToneMapACES.comp.wgsl  ToneMapExtendedReinhardLuminance.comp.wgsl  ToneMapHable.comp.wgsl  ToneMapReinhard.comp.wgsl
Examples/: BasicTriangle.c  BasicVertexBuffer.c  ClearScreen.c  Common.c  TexturedAnimatedQuad.c  TexturedQuad.c  ToneMapping.c  main.c
